--- a/blog/requirements.txt
+++ b/blog/requirements.txt
@@ -5,6 +5,7 @@ defusedxml==0.6.0
 Django==3.0.5
 django-allauth==0.41.0
 django-tinymce==3.0.2
+gunicorn==20.0.4
 idna==2.9
 oauthlib==3.1.0
 Pillow==7.1.2
